openmp fix,cuda UM added

--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/cudac/nways_cuda.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/cudac/nways_cuda.ipynb
@@ -106,7 +106,8 @@
     "| | **Step 7** Transfer data from the device to the host with _cudaMemcpy()_ |\n",
     "| | **Step 8** Consume the crunched data on Host |\n",
     "\n",
-    "CPU and GPU memory are different and developer needs to use additional CUDA API to allocate and free memory on GPU. Only device memory can be consumed inside GPU function call (kernel). Linear memory on Device is typically allocated using ```cudaMalloc()``` and freed using ```cudaFree()``` and data transfer between host memory and device memory are typically done using ```cudaMemcpy()```\n",
+    "CPU and GPU memory are different and developer needs to use additional CUDA API to allocate and free memory on GPU. Only device memory can be consumed inside GPU function call (kernel). Linear memory on Device is typically allocated using ```cudaMalloc()``` and freed using ```cudaFree()``` and data transfer between host memory and device memory are typically done using ```cudaMemcpy()```.\n",
+    "\n",
     "\n",
     "The API definition of these are as follows: \n",
     "\n",
@@ -117,8 +118,30 @@
     "**cudaError_t cudaFree (void ∗ devPtr)** Frees the memory space pointed to by devPtr, which must have been returned by a previous call to cudaMalloc() or other equivalent API. \n",
     "\n",
     "Let us look at these steps in more detail for a simple vector addition code:\n",
-    "<img src=\"../images/cuda_vec_add.png\">\n",
     "\n",
+    "<img src=\"../images/cuda_vec_add2.png\">\n",
+    "\n",
+    "\n",
+    "### Unified Memory\n",
+    "An easier way to allocate memory accessible by the GPU is to use *Unified Memory*. It provides a single memory space accessible by all GPUs and CPUs in the system. To allocate data in unified memory, we call `cudaMallocManaged()`, which returns a pointer that you can access from host (CPU) code or device (GPU) code. To free the data, just pass the pointer to `cudaFree()`. To read more about unified memory, please checkout the blog on [Unified Memory for CUDA beginners](https://developer.nvidia.com/blog/unified-memory-cuda-beginners/).\n",
+    "\n",
+    "<img src=\"../images/unified_memory.png\">\n",
+    "\n",
+    "Below is the example usage of how to use managed memory in the CUDA code:\n",
+    "\n",
+    "```cpp\n",
+    " // Allocate Unified Memory -- accessible from CPU or GPU\n",
+    "  int *a, *b, *c;\n",
+    "  cudaMallocManaged(&a, N*sizeof(int));\n",
+    "  cudaMallocManaged(&b, N*sizeof(int));\n",
+    "  cudaMallocManaged(&c, N*sizeof(int));\n",
+    "  ...\n",
+    "\n",
+    "  // Free memory\n",
+    "  cudaFree(a);\n",
+    "  cudaFree(b);\n",
+    "  cudaFree(c);\n",
+    "```\n",
     "\n",
     "## Understanding Threads and Blocks\n",
     "We will be looking at understanding _thread_ and _block_ level parallelism in this section.The number of threads and blocks to be launched is passed as parameter to ```<<<,>>>``` brackets in a kernel call.\n",
@@ -238,7 +261,9 @@
    "metadata": {},
    "source": [
     "## Compile and Run for NVIDIA GPU\n",
-    "Now, lets start modifying the original code and add CUDA C constructs. From the top menu, click on *File*, and *Open* `rdf.cpp` and `dcdread.h` from the current directory at `C/source_code/cudac` directory. Remember to **SAVE** your code after changes, before running below cells."
+    "Now, lets start modifying the original code and add CUDA C constructs. You can either explicitly transfer the allocated data between CPU and GPU or use unified memory which creates a pool of managed memory that is shared between the CPU and GPU.\n",
+    "\n",
+    "From the top menu, click on *File*, and *Open* `rdf.cpp` and `dcdread.h` from the current directory at `C/source_code/cudac` directory. Remember to **SAVE** your code after changes, before running below cells."
    ]
   },
   {
@@ -303,12 +328,12 @@
     "<img src=\"../images/cuda_profile_api.png\">\n",
     "\n",
     "\n",
-    "Near the bottom of the timeline row tree, the GPU node will appear and contain a CUDA node. Within the CUDA node, each CUDA context used within the process will be shown along with its corresponding CUDA streams. Streams will contain memory operations and kernel launches on the GPU. In the example screenshot below, you can see Kernel launches are represented by blue, while memory transfers are displayed in purple and green.\n",
+    "Near the bottom of the timeline row tree, the GPU node will appear and contain a CUDA node. Within the CUDA node, each CUDA context used within the process will be shown along with its corresponding CUDA streams. Streams will contain memory operations and kernel launches on the GPU. In the example screenshot below, you can see Kernel launches are represented by blue, while memory transfers are displayed in red and green. In this example screenshot, unified memory was used rather than explicitly transferring data between CPU and GPU.\n",
     "\n",
     "<img src=\"../images/cuda_profile.png\">\n",
     "\n",
     "\n",
-    "Feel free to checkout the [solution](../../source_code/cudac/SOLUTION/rdf.cu) to help you understand better or compare your implementation with the sample solution.\n",
+    "Feel free to checkout the [solution (with managed memory)](../../source_code/cudac/SOLUTION/rdf_unified_memory.cu) or [solution (without managed memory)](../../source_code/cudac/SOLUTION/rdf_malloc.cu)  to help you understand better or compare your implementation with the sample solution.\n",
     "\n",
     "\n",
     "# CUDA C Analysis\n",
