--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp.ipynb
@@ -27,7 +27,7 @@
     "- Understand the key directives and steps involved in making a sequential code parallel\n",
     "\n",
     "We do not intend to cover:\n",
-    "- Optimization techniques in details, while you are free to test optimization concepts in the **Additional Section** at the end of the lab.\n",
+    "- Optimization techniques in details\n",
     "\n",
     "\n",
     "# OpenMP Directives\n",
@@ -437,7 +437,7 @@
     "| CCE| latest | Cray | 4.5 partial spec supported | \n",
     "| XL | latest | IBM | 4.5 partial spec supported |\n",
     "| Clang | 9.0 | Community | 4.5 partial spec supported |\n",
-    "| HPC SDK | 20.9 | NVIDIA HPC SDK | 5.0 spec supported |\n",
+    "| HPC SDK | 20.11 | NVIDIA HPC SDK | 5.0 spec supported |\n",
     "\n"
    ]
   },
