--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/stdpar/nways_stdpar.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/stdpar/nways_stdpar.ipynb
@@ -23,21 +23,21 @@
     "## Learning objectives\n",
     "The **goal** of this lab is to:\n",
     "\n",
-    "- Learn how to run the same code on both a multicore CPU and a GPU using pSTL library\n",
-    "- Understand steps required to make a sequential code parallel using pSTL constructs\n",
+    "- Learn how to run the same code on both a multicore CPU and a GPU using stdpar\n",
+    "- Understand steps required to make a sequential code parallel using stdpar constructs\n",
     "\n",
     "We do not intend to cover:\n",
     "- Detailed optimization techniques and mapping of stdpar constructs to CUDA C\n",
     "\n",
     "\n",
     "# STL\n",
-    "If you are not familiar with STL (Standard Teamplate Library), this section will give you a brief introduction that would be required to understand the usage of STL library for our code.\n",
+    "If you are not familiar with STL (Standard Template Library), this section will give you a brief introduction that would be required to understand the usage of STL library for our code.\n",
     "\n",
     "The C++ STL (Standard Template Library) is a powerful set of C++ template classes to provide general-purpose classes and functions with templates that implement many popular and commonly used algorithms and data structures like vectors, lists, queues, and stacks.\n",
     "\n",
     "At the core of the C++ Standard Template Library are following three well-structured components \n",
     "\n",
-    "- Containers: Containers are used to manage collections of objects of a certain kind. There are several different types of containers like deque, list, vector, map etc.\n",
+    "- Containers: Containers are used to manage collections of objects of a certain kind. There are several different types of containers like dequeue, list, vector, map etc.\n",
     "\n",
     "- Algorithms: Algorithms act on containers. They provide the means by which you will perform initialization, sorting, searching, and transforming of the contents of containers.\n",
     "\n",
@@ -45,7 +45,7 @@
     "\n",
     "For our code to make *Pair Calculation* we will be making use of ```vector``` container. The example below will introduce you to the container and how to use iterator to step through elements of vector. ```vector``` container (a C++ Standard Template) which is similar to an array with an exception that it automatically handles its own storage requirements in case it grows\n",
     "\n",
-    "For our code we will be making use of ```std::for_each``` alogithm and its sample usage is also shown in code below:\n",
+    "For our code we will be making use of ```std::for_each``` algorithm and its sample usage is also shown in code below:\n",
     "\n",
     "```cpp\n",
     "#include <vector>\n",
@@ -85,7 +85,7 @@
     "\n",
     "\n",
     "# Parallel STL\n",
-    "Starting with C++17, parallelism has become an integral part of the standard itself. Parallel STL (pSTL) is an implementation of the C++ standard library algorithms with support for execution policies, commonly called C++17.\n",
+    "Starting with C++17, parallelism has become an integral part of the standard itself. Parallel STL is an implementation of the C++ standard library algorithms with support for execution policies, commonly called C++17.\n",
     "\n",
     "C++17 Parallel Standard Library (stdpar) introduces parallel and vector concurrency for standard algorithms. It is important to note that stdpar is a library and not a language extension.\n",
     "\n",
@@ -118,7 +118,7 @@
     "std::sort(std::execution::par, c.begin(), c.end());\n",
     "```\n",
     "\n",
-    "We will be using PGI compiler provided pSTL implementation to compile and run code on NVIDIA GPU. Currently the PGI implementation of C++ parallel algorithms uses [Unified Memory](../GPU_Architecture_Terminologies.ipynb), which means that heap memory is automatically shared between a CPU(Host) and GPU(Device). Stack memory and global memory are not shared. Below given example shows the right allocation and usage of the pSTL.\n",
+    "We will be using the NVIDIA HPC C++ compiler, NVC++. It supports C++17, C++ Standard Parallelism (stdpar) for NVIDIA GPUs, OpenACC for multicore CPUs and NVIDIA GPUs, and OpenMP for multicore CPUs. No language extensions or non-standard libraries are required to enable GPU acceleration. All data movement between host memory and GPU device memory is performed implicitly and automatically under the control of CUDA [Unified Memory](../GPU_Architecture_Terminologies.ipynb), which means that heap memory is automatically shared between a CPU(Host) and GPU(Device). Stack memory and global memory are not shared. Below given example shows the right allocation and usage of the stdpar.\n",
     "\n",
     "```cpp\n",
     "std::vector<int> v = ...;\n",
@@ -128,7 +128,7 @@
     "std::sort(std::execution::par, a.begin(), a.end()); // Fails, array stored on the stack\n",
     "```\n",
     "\n",
-    "For our code we will be making use of ```std::for_each``` alogithm with support for ```std::execution::par``` execution policy\n",
+    "For our code we will be making use of ```std::for_each``` algorithm with support for ```std::execution::par``` execution policy\n",
     "\n",
     "**Counting Iterator**: In our code we will also be using a special iterator ```counting_iterator```. This iterator which represents a pointer into a range of sequentially changing values. This iterator is useful for creating a range filled with a sequence without explicitly storing it in memory. Using ```counting_iterator``` saves memory capacity and bandwidth"
    ]
@@ -146,9 +146,9 @@
    "source": [
     "### Compile and Run for Multicore\n",
     "\n",
-    "Now that we have added a pSTL code, let us try compile the code. We will be using NVIDIA HPC SDK for this exercise. The flags used for enabling parallel STL target offloading are as follows:\n",
+    "Now that we have added a stdpar code, let us try compile the code. We will be using NVIDIA HPC SDK for this exercise. The flags used for enabling parallel STL target offloading are as follows:\n",
     "\n",
-    "`-stdpar` : This flag tell the compiler to enable Parallel STL for a respective target\n",
+    "- `stdpar` : This flag tell the compiler to enable Parallel STL for a respective target\n",
     "- `stdpar=multicore` will allow us to compile our code for a multicore\n",
     "- `stdpar` will allow us to compile our code for a NVIDIA GPU (Default is NVIDIA)"
    ]
@@ -299,11 +299,12 @@
     "- stdpar is part of the standard language and provides a good start for accelerating code on accelerators like GPU and multicores.\n",
     "\n",
     "**Limitations/Constraints**\n",
-    "-  stdpar is available as part of C++17 onwards and does not work with other popular languages like Fortran which is supported by OpenMP and OpenACC.\n",
-    "  \n",
+    "1. It is key to understand that *std::par* is not an alternative to CUDA. *std:par* provides highest portability and can be seen as the first step to porting on GPU. The general abstraction limits the optimization functionalities. For example, stdpar implementation is currently dependent on Unified memory. Moreover, one does not have control over thread management and that will limit the performance improvement.\n",
+    "2. C++ constructs can only be used in the code using C++17 features and may not work for legacy codes.\n",
+    "\n",
     "\n",
     "**Which Compilers Support stdpar on GPUs and Multicore?**\n",
-    "1. NVIDIA GPU: As of April 2020 the compiler that support std::par on NVIDIA GPU is from NVIDIA/PGI. \n",
+    "1. NVIDIA GPU: As of Jan 2021 the compiler that support std::par on NVIDIA GPU is from NVIDIA. \n",
     "2. x86 Multicore: gcc has an implementation on a multicore CPU which is based on Intel TBB in the backend."
    ]
   },
