added cell to add resource limiting to all notebooks using tensorflow

--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Intro_to_DL/CNN's.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Intro_to_DL/CNN's.ipynb
@@ -186,6 +186,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tensorflow.compat.v1 import ConfigProto\n",
+    "from tensorflow.compat.v1 import InteractiveSession\n",
+    "config = ConfigProto()\n",
+    "config.gpu_options.per_process_gpu_memory_fraction = 0.2 # % of total memory per gpu to use. 0.2 will use 20% but then uses 25%\n",
+    "config.gpu_options.allow_growth = True # init allocate very little and expand if needed (might be better to allocate n and not allow growth )\n",
+    "session = InteractiveSession(config=config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Let's Import the Dataset\n",
     "fashion_mnist = keras.datasets.fashion_mnist\n",
     "\n",
