updated to allow growth false

--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Manipulation_of_Image_Data_and_Category_Determination_using_Text_Data.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Manipulation_of_Image_Data_and_Category_Determination_using_Text_Data.ipynb
@@ -436,6 +436,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tensorflow.compat.v1 import ConfigProto\n",
+    "from tensorflow.compat.v1 import InteractiveSession\n",
+    "config = ConfigProto()\n",
+    "config.gpu_options.per_process_gpu_memory_fraction = 0.2 # % of total memory per gpu to use. 0.2 will use 20% but then uses 25%\n",
+    "config.gpu_options.allow_growth = False # init allocate very little and expand if needed (might be better to allocate n and not allow growth )\n",
+    "session = InteractiveSession(config=config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import tensorflow as tf\n",
     "y_train = tf.one_hot(y_train,depth=8)\n",
     "y_test = tf.one_hot(y_test,depth=8)\n",
@@ -460,20 +474,6 @@
     "![alt_text](images/model.png)\n",
     "\n",
     "We will be Implementing this model in Keras using the following code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.compat.v1 import ConfigProto\n",
-    "from tensorflow.compat.v1 import InteractiveSession\n",
-    "config = ConfigProto()\n",
-    "config.gpu_options.per_process_gpu_memory_fraction = 0.2 # % of total memory per gpu to use. 0.2 will use 20% but then uses 25%\n",
-    "config.gpu_options.allow_growth = True # init allocate very little and expand if needed (might be better to allocate n and not allow growth )\n",
-    "session = InteractiveSession(config=config)"
    ]
   },
   {
