--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Solutions.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Solutions.ipynb
@@ -29,7 +29,7 @@
     "from tensorflow.compat.v1 import InteractiveSession\n",
     "config = ConfigProto()\n",
     "config.gpu_options.per_process_gpu_memory_fraction = 0.2 # % of total memory per gpu to use. 0.2 will use 20% but then uses 25%\n",
-    "config.gpu_options.allow_growth = True # init allocate very little and expand if needed (might be better to allocate n and not allow growth )\n",
+    "config.gpu_options.allow_growth = False # init allocate very little and expand if needed (might be better to allocate n and not allow growth )\n",
     "session = InteractiveSession(config=config)"
    ]
   },
