--- a/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/Intro_to_DL/CNN's.ipynb
+++ b/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/Intro_to_DL/CNN's.ipynb
@@ -185,33 +185,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.compat.v1 import ConfigProto\n",
     "from tensorflow.compat.v1 import InteractiveSession\n",
     "config = ConfigProto()\n",
-    "config.gpu_options.per_process_gpu_memory_fraction = 0.2 # % of total memory per gpu to use. 0.2 will use 20% but then uses 25%\n",
+    "total_vram = 9314\n",
+    "limit_target = 1024\n",
+    "fraction = total_vram/limit_target\n",
+    "config.gpu_options.per_process_gpu_memory_fraction = fraction # % of total memory per gpu to use. 0.2 will use 20% but then uses 25%\n",
     "config.gpu_options.allow_growth = False # init allocate very little and expand if needed (might be better to allocate n and not allow growth )\n",
     "session = InteractiveSession(config=config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Size of Training Images :(60000, 28, 28)\n",
-      "Size of Training Labels :(60000,)\n",
-      "Size of Test Images :(10000, 28, 28)\n",
-      "Size of Test Labels :(10000,)\n",
-      "Training Set Labels :[9 0 0 ... 3 0 5]\n",
-      "Test Set Labels :[9 2 1 ... 8 1 5]\n"
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'keras' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-69421884a00e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Let's Import the Dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfashion_mnist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfashion_mnist\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtrain_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtest_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfashion_mnist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'keras' is not defined"
      ]
     }
    ],
@@ -673,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
