--- a/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/Intro_to_DL/Part_2.ipynb
+++ b/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/Intro_to_DL/Part_2.ipynb
@@ -115,7 +115,10 @@
     "from tensorflow.compat.v1 import ConfigProto\n",
     "from tensorflow.compat.v1 import InteractiveSession\n",
     "config = ConfigProto()\n",
-    "config.gpu_options.per_process_gpu_memory_fraction = 0.2 # % of total memory per gpu to use. 0.2 will use 20% but then uses 25%\n",
+    "total_vram = 9314\n",
+    "limit_target = 1024\n",
+    "fraction = total_vram/limit_target\n",
+    "config.gpu_options.per_process_gpu_memory_fraction = fraction # % of total memory per gpu to use. 0.2 will use 20% but then uses 25%\n",
     "config.gpu_options.allow_growth = False # init allocate very little and expand if needed (might be better to allocate n and not allow growth )\n",
     "session = InteractiveSession(config=config)"
    ]
