Removed additional notebooks and added GPU check in the notebooks

--- a/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/Start_Here.ipynb
+++ b/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/Start_Here.ipynb
@@ -10,7 +10,42 @@
     "\n",
     "The following contents will be covered during the Bootcamp :\n",
     "- [CNN Primer and Keras 101](Intro_to_DL/Part_2.ipynb)\n",
-    "- [Steady State Flow using Neural Networks](CFD/Start_Here.ipynb)"
+    "- [Steady State Flow using Neural Networks](CFD/Start_Here.ipynb)\n",
+    "\n",
+    "## Quick GPU Check\n",
+    "\n",
+    "Before moving forward let us check if Tensorflow backend is able to see and use GPU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import Necessary Libraries\n",
+    "\n",
+    "from __future__ import absolute_import, division, print_function, unicode_literals\n",
+    "\n",
+    "# TensorFlow and tf.keras\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "\n",
+    "# Helper libraries\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "print(tf.__version__)\n",
+    "\n",
+    "\n",
+    "tf.test.gpu_device_name()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output of the cell above should show all the available compaitable GPU on the system. If no GPU device is listed or you see an error means that there was no compaitable GPU present on the system and the future calls may run on CPU consuming more time."
    ]
   },
   {
