Chnaged to latest version of RAPIDS and CUDA. Fixed minor bugs

--- a/ai/RAPIDS/English/Python/jupyter_notebook/CuML/01-LinearRegression-Hyperparam.ipynb
+++ b/ai/RAPIDS/English/Python/jupyter_notebook/CuML/01-LinearRegression-Hyperparam.ipynb
@@ -365,7 +365,7 @@
     "plt.scatter(x, y_noisy, label='empirical data points')\n",
     "plt.plot(x, y, color='black', label='true relationship')\n",
     "plt.plot(inputs, outputs, color='red', label='predicted relationship (cpu)')\n",
-    "plt.plot(inputs, gpu_outputs.to_array(), color='green', label='predicted relationship (gpu)')\n",
+    "plt.plot(inputs, gpu_outputs.get(), color='green', label='predicted relationship (gpu)')\n",
     "plt.legend()\n",
     "\n",
     "</pre>\n",
@@ -758,7 +758,7 @@
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "[Next Notebook](03_CuML_Exercise.ipynbb)\n",
+    "[Next Notebook](03_CuML_Exercise.ipynb)\n",
     "\n",
     "\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
