--- a/ai/RAPIDS/English/Python/jupyter_notebook/Introduction_To_Rapids.ipynb
+++ b/ai/RAPIDS/English/Python/jupyter_notebook/Introduction_To_Rapids.ipynb
@@ -32,17 +32,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Why? \n",
-    "\n",
-    "- With GPU Acceleration RAPIDS help by reducing data preparation, train and inference time \n",
-    "- RAPIDS is designed to have API and interface similar to the traditional familiar tools and maintain accuracy\n",
-    "#### How? \n",
-    "RAPIDS is a open source project and can be donwloaded from [here](https://github.com/rapidsai) . Also RAPIDS is presnet as a container in NGC and can be downloaded from [here](https://ngc.nvidia.com/catalog/containers/nvidia:rapidsai:rapidsai)\n",
-    "#### Who?\n",
-    "RAPIDS is primarily targeted for Data Scientist who are looking at improving performance of their experiments without losing out on accuracy\n",
-    "#### When? \n",
-    "Same day RAPIDS posted to Github\n",
-    "\n"
+    "#### Key Features? \n",
+    "- Hassle-Free Integration: Accelerate your Python data science toolchain with minimal code changes and no new tools to learn \n",
+    "- Top Model Accuracy: Increase machine learning model accuracy by iterating on models faster and deploying them more frequently\n",
+    "- Reduced Training Time: RAPIDS is primarily targeted for Data Scientist who are looking at improving performance of their experiments without losing out on accuracy. Drastically improve your productivity with near-interactive data science.\n",
+    "- Open Source: Customizable, extensible, interoperable - the open-source software is supported by NVIDIA and built on Apache Arrow. It can be donwloaded from [here](https://github.com/rapidsai) . Also RAPIDS is presnet as a container in NGC and can be downloaded from [here](https://ngc.nvidia.com/catalog/containers/nvidia:rapidsai:rapidsai)\n"
    ]
   },
   {
